# HealthScienceCalculator

./: CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  bmi_example.ipynb  conf.py  example.ipynb  make.bat  tdee_example.ipynb  unit_convert_example.ipynb
src/healthsciencecalculator/: __init__.py  bmr.py  get_bmi.py  healthsciencecalculator.py
tests/: test_bmi.py  test_get_bmi.py  test_get_bmr.py  test_get_tdee.py  test_healthsciencecalculator.py  test_unit_convert.py
