[tool.poetry]
name = "healthsciencecalculator"
version = "0.1.0"
description = "Calculates basic health indexes"
authors = ["Forgive Agbesi, Jiayi Li, Hala Arar, Tengwei Wang"]
license = "MIT"
readme = "README.md"
packages = [{include = "healthsciencecalculator", from = "src"}]

packages = [
  { include = "healthsciencecalculator", from = "src" }
]


[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^6.0.0"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]                                                    # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry build" # build dists 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
