[tool.poetry]
name = "healthsciencecalculator"
version = "0.1.0"
description = "Calculates basic health indexes"
authors = ["Forgive Agbesi, Jiayi Li, Hala Arar, Tengwei Wang"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "healthsciencecalculator", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^6.0.0"
jupyter = "^1.1.1"
myst-nb = {version = "^1.1.2", python = "^3.9"}
sphinx-autoapi = "^3.4.0"
sphinx-rtd-theme = "^3.0.2"
python-semantic-release = "^9.17.0"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]                                                    # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry build" # build dists 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
